--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,6 +7,10 @@
 body,html{
     scroll-behavior: smooth;
 }
+.blog_content h1, .blog_content h2, .blog_content h3, .blog_content h4{
+    font-size: 24px;
+    font-weight: bold;
+}
 
 body{
     font-family: 'Manrope', sans-serif;
